Updated to use new loggers. Patched classloaders for stability and isolation of web applications.
git-svn-id: http://red5.googlecode.com/svn/java/server/trunk@3356 1b6495e4-3631-0410-8e05-8f51eee8b9cc